--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="visually-hidden">Our Principles</h2>
           <ul class="principles-cards-grid">
             <li class="principles-card">
+              <div class="principles-icon-wrapper">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="/images/icons.svg#antena"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="principles-card">
+              <div class="principles-icon-wrapper">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="/images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="principles-card">
+              <div class="principles-icon-wrapper">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="/images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="principles-card">
+              <div class="principles-icon-wrapper">
+                <svg class="principles-icon" width="64" height="64">
+                  <use href="/images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="block-header">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -109,6 +129,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
+                <div class="team-card-icons">
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -120,6 +162,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+                <div class="team-card-icons">
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -131,6 +195,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Camila Garcia</h3>
                 <p class="text">Marketing</p>
+                <div class="team-card-icons">
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="team-card">
@@ -142,6 +228,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
+                <div class="team-card-icons">
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-card-icon-wrapper">
+                    <svg class="team-card-icon" width="16" height="16">
+                      <use href="/images/icons.svg#linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
           </ul>
@@ -152,66 +260,120 @@
           <h2 class="section-header">Our Portfolio</h2>
           <ul class="portfolio-grid">
             <li class="portfolio-card">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking application preview"
-                width="360"
-              />
+              <div class="portfolio-card-img-wrapper">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking application preview"
+                  width="360"
+                />
+                <div class="portfolio-img-overlay">
+                  <p class="portfolio-img-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Banking App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless payment in action"
-                width="360"
-              />
+              <div class="portfolio-card-img-wrapper">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless payment in action"
+                  width="360"
+                />
+                <div class="portfolio-img-overlay">
+                  <p class="portfolio-img-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Mediation application first screen"
-                width="360"
-              />
+              <div class="portfolio-card-img-wrapper">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Mediation application first screen"
+                  width="360"
+                />
+                <div class="portfolio-img-overlay">
+                  <p class="portfolio-img-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Chauffeur in car"
-                width="360"
-              />
+              <div class="portfolio-card-img-wrapper">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Chauffeur in car"
+                  width="360"
+                />
+                <div class="portfolio-img-overlay">
+                  <p class="portfolio-img-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/wallpapers.jpg"
-                alt="Wallpapers presentation"
-                width="360"
-              />
+              <div class="portfolio-card-img-wrapper">
+                <img
+                  src="./images/wallpapers.jpg"
+                  alt="Wallpapers presentation"
+                  width="360"
+                />
+                <div class="portfolio-img-overlay">
+                  <p class="portfolio-img-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Vivid girl doing video call with her phone"
-                width="360"
-              />
+              <div class="portfolio-card-img-wrapper">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Vivid girl doing video call with her phone"
+                  width="360"
+                />
+                <div class="portfolio-img-overlay">
+                  <p class="portfolio-img-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -223,13 +385,40 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
-          >Web<span class="light">Studio</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
+        <div class="logo-content">
+          <a class="logo" href="./index.html"
+            >Web<span class="light">Studio</span></a
+          >
+          <p class="text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="text">Social media</p>
+          <div class="social-media-icons">
+            <div class="social-media-icon-wrapper">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="/images/icons.svg#instagram"></use>
+              </svg>
+            </div>
+            <div class="social-media-icon-wrapper">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="/images/icons.svg#twitter"></use>
+              </svg>
+            </div>
+            <div class="social-media-icon-wrapper">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="/images/icons.svg#facebook"></use>
+              </svg>
+            </div>
+            <div class="social-media-icon-wrapper">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="/images/icons.svg#linkedin"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
