--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li class="principles-card">
               <div class="principles-icon-wrapper">
                 <svg class="principles-icon" width="64" height="64">
-                  <use href="/images/icons.svg#antena"></use>
+                  <use href="./images/icons.svg#antena"></use>
                 </svg>
               </div>
               <h3 class="block-header">Strategy</h3>
@@ -80,7 +80,7 @@
             <li class="principles-card">
               <div class="principles-icon-wrapper">
                 <svg class="principles-icon" width="64" height="64">
-                  <use href="/images/icons.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="block-header">Punctuality</h3>
@@ -92,7 +92,7 @@
             <li class="principles-card">
               <div class="principles-icon-wrapper">
                 <svg class="principles-icon" width="64" height="64">
-                  <use href="/images/icons.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="block-header">Diligence</h3>
@@ -104,7 +104,7 @@
             <li class="principles-card">
               <div class="principles-icon-wrapper">
                 <svg class="principles-icon" width="64" height="64">
-                  <use href="/images/icons.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="block-header">Technologies</h3>
