--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
-                <div class="team-card-icons">
-                  <div class="team-card-icon-wrapper">
+                <ul class="team-card-icons">
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
-                  </div>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -162,28 +162,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
-                <div class="team-card-icons">
-                  <div class="team-card-icon-wrapper">
+                <ul class="team-card-icons">
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
-                  </div>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -195,28 +195,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Camila Garcia</h3>
                 <p class="text">Marketing</p>
-                <div class="team-card-icons">
-                  <div class="team-card-icon-wrapper">
+                <ul class="team-card-icons">
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
-                  </div>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -228,28 +228,28 @@
               <div class="team-card-content">
                 <h3 class="block-header">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
-                <div class="team-card-icons">
-                  <div class="team-card-icon-wrapper">
+                <ul class="team-card-icons">
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
-                  </div>
-                  <div class="team-card-icon-wrapper">
+                  </li>
+                  <li class="team-card-icon-wrapper">
                     <svg class="team-card-icon" width="16" height="16">
-                      <use href="/images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
-                  </div>
-                </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -396,28 +396,28 @@
         </div>
         <div class="social-media">
           <p class="text">Social media</p>
-          <div class="social-media-icons">
-            <div class="social-media-icon-wrapper">
+          <ul class="social-media-icons">
+            <li class="social-media-icon-wrapper">
               <svg class="social-media-icon" width="24" height="24">
-                <use href="/images/icons.svg#instagram"></use>
+                <use href="./images/icons.svg#instagram"></use>
               </svg>
-            </div>
-            <div class="social-media-icon-wrapper">
+            </li>
+            <li class="social-media-icon-wrapper">
               <svg class="social-media-icon" width="24" height="24">
-                <use href="/images/icons.svg#twitter"></use>
+                <use href="./images/icons.svg#twitter"></use>
               </svg>
-            </div>
-            <div class="social-media-icon-wrapper">
+            </li>
+            <li class="social-media-icon-wrapper">
               <svg class="social-media-icon" width="24" height="24">
-                <use href="/images/icons.svg#facebook"></use>
+                <use href="./images/icons.svg#facebook"></use>
               </svg>
-            </div>
-            <div class="social-media-icon-wrapper">
+            </li>
+            <li class="social-media-icon-wrapper">
               <svg class="social-media-icon" width="24" height="24">
-                <use href="/images/icons.svg#linkedin"></use>
+                <use href="./images/icons.svg#linkedin"></use>
               </svg>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
