--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="main-navigation-list">
             <li>
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link active" href="./index.html">Studio</a>
             </li>
             <li>
               <a class="nav-link" href="">Portfolio</a>
