--- a/index.html
+++ b/index.html
@@ -131,24 +131,32 @@
                 <p class="text">Product Designer</p>
                 <ul class="team-card-icons">
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -164,24 +172,32 @@
                 <p class="text">Frontend Developer</p>
                 <ul class="team-card-icons">
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -197,24 +213,32 @@
                 <p class="text">Marketing</p>
                 <ul class="team-card-icons">
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -230,24 +254,32 @@
                 <p class="text">UI Designer</p>
                 <ul class="team-card-icons">
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-card-icon-wrapper">
-                    <svg class="team-card-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                    <a href="" class="icon-link">
+                      <svg class="team-card-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
