--- a/index.html
+++ b/index.html
@@ -298,13 +298,12 @@
                   alt="Banking application preview"
                   width="360"
                 />
-                <div class="portfolio-img-overlay">
-                  <p class="portfolio-img-overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Banking App</h3>
@@ -318,13 +317,12 @@
                   alt="Cashless payment in action"
                   width="360"
                 />
-                <div class="portfolio-img-overlay">
-                  <p class="portfolio-img-overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Cashless Payment</h3>
@@ -338,13 +336,12 @@
                   alt="Mediation application first screen"
                   width="360"
                 />
-                <div class="portfolio-img-overlay">
-                  <p class="portfolio-img-overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Meditation App</h3>
@@ -358,13 +355,12 @@
                   alt="Chauffeur in car"
                   width="360"
                 />
-                <div class="portfolio-img-overlay">
-                  <p class="portfolio-img-overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Taxi Service</h3>
@@ -378,13 +374,12 @@
                   alt="Wallpapers presentation"
                   width="360"
                 />
-                <div class="portfolio-img-overlay">
-                  <p class="portfolio-img-overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Screen Illustrations</h3>
@@ -398,13 +393,12 @@
                   alt="Vivid girl doing video call with her phone"
                   width="360"
                 />
-                <div class="portfolio-img-overlay">
-                  <p class="portfolio-img-overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card-content">
                 <h3 class="block-header">Online Courses</h3>
