--- a/index.html
+++ b/index.html
@@ -424,24 +424,32 @@
           <p class="text">Social media</p>
           <ul class="social-media-icons">
             <li class="social-media-icon-wrapper">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg#instagram"></use>
-              </svg>
+              <a href="" class="icon-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-media-icon-wrapper">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg#twitter"></use>
-              </svg>
+              <a href="" class="icon-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-media-icon-wrapper">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg#facebook"></use>
-              </svg>
+              <a href="" class="icon-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-media-icon-wrapper">
-              <svg class="social-media-icon" width="24" height="24">
-                <use href="./images/icons.svg#linkedin"></use>
-              </svg>
+              <a href="" class="icon-link">
+                <svg class="social-media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
